samples/_failures_safe/1761254482_d6bc10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0dc949bc.c: In function ‘main’:
./samples/SAFE/__tmp_0dc949bc.c:140:9: error: expected expression at end of input
  140 |         return
      |         ^~~~~~
./samples/SAFE/__tmp_0dc949bc.c:140:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0dc949bc.c:140:9: error: expected declaration or statement at end of input
